--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/ts-plugin": "^1.10.4",
     "@headlessui/react": "^2.2.0",
     "@iconify-json/ant-design": "^1.2.2",
     "@iconify-json/fa6-brands": "^1.2.1",
