--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/ts-plugin": "^1.10.4",
+    "@astrojs/vercel": "^8.0.4",
     "@headlessui/react": "^2.2.0",
     "@iconify-json/ant-design": "^1.2.2",
     "@iconify-json/fa6-brands": "^1.2.1",
@@ -26,7 +27,7 @@
     "@iconify/json": "^2.2.272",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro": "^4.16.9",
+    "astro": "^5.1.9",
     "astro-icon": "^1.1.2",
     "axios": "^1.7.9",
     "flyonui": "^1.1.0",
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
