--- a/package.json
+++ b/package.json
@@ -25,22 +25,29 @@
     "@iconify-json/logos": "^1.2.3",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify/json": "^2.2.272",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.1.9",
     "astro-icon": "^1.1.2",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flyonui": "^1.1.0",
+    "lucide-react": "^0.474.0",
     "motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@iconify/react": "^5.2.0",
+    "@types/node": "^22.12.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "prettier": "^3.3.3",
